Made scrollbar always appear to avoid UI jumping around

--- a/static/main.css
+++ b/static/main.css
@@ -6,6 +6,7 @@ body {
     max-width: 84%;
     color: #333;
     background-color: #f5f5f5;
+    overflow-y: scroll;
 }
 
 h2 {
